pkg/plugins/policies/meshloadbalancingstrategy/plugin/v1alpha1/testdata/egress_meshexternalservice.listeners.golden.yaml
resources:
- name: egress-listener
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 10002
    enableReusePort: true
    filterChains:
    - filterChainMatch:
        serverNames:
        - ad098e6a3e7e807e1.external.9000.mesh-1.mes
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          routeConfig:
            name: inbound:external
            requestHeadersToRemove:
            - x-kuma-tags
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: external
              routes:
              - match:
                  prefix: /
                route:
                  cluster: external
                  hashPolicy:
                  - queryParameter:
                      name: queryparam
                    terminal: true
                  - connectionProperties:
                      sourceIp: true
                  timeout: 0s
          statPrefix: "127_0_0_1_10002"
      name: mesh-1_external___extsvc_9000
    name: inbound:127.0.0.1:10002
    trafficDirection: INBOUND
